--- a/public/index.html
+++ b/public/index.html
@@ -22,11 +22,70 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>TensorFlow Model</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div class="tfjs-example-container">
+      <section class='title-area'>
+        <h1>TensorFlow.js: Digit Recognizer with Layers</h1>
+        <p class='subtitle'>Train a model to recognize handwritten digits from the MNIST database using the tf.layers
+          api.
+        </p>
+      </section>
+  
+      <section>
+        <p class='section-head'>Description</p>
+        <p>
+          This examples lets you train a handwritten digit recognizer using either a Convolutional Neural Network
+          (also known as a ConvNet or CNN) or a Fully Connected Neural Network (also known as a DenseNet).
+        </p>
+        <p>The MNIST dataset is used as training data.</p>
+      </section>
+  
+      <section>
+        <p class='section-head'>Training Parameters</p>
+        <div>
+          <label>Model Type:</label>
+          <select id="model-type">
+            <option>ConvNet</option>
+            <option>DenseNet</option>
+          </select>
+        </div>
+  
+        <div>
+          <label># of training epochs:</label>
+          <input id="train-epochs" value="3">
+        </div>
+  
+        <button id="train">Load Data and Train Model</button>
+      </section>
+  
+      <section>
+        <p class='section-head'>Training Progress</p>
+        <p id="status"></p>
+        <p id="message"></p>
+  
+        <div id="stats">
+          <div class="canvases">
+            <label id="loss-label"></label>
+            <div id="loss-canvas"></div>
+          </div>
+          <div class="canvases">
+            <label id="accuracy-label"></label>
+            <div id="accuracy-canvas"></div>
+          </div>
+        </div>
+      </section>
+  
+      <section>
+        <p class='section-head'>Inference Examples</p>
+        <div id="images"></div>
+      </section>
+  
+  
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
